feat: add server tests

--- a/include/calculator/BUILD.bazel
+++ b/include/calculator/BUILD.bazel
@@ -12,9 +12,8 @@ cc_library(
 
 cc_test(
     name = "calculator_test",
-    size = "small",
     srcs = [
-        "calculator_test.cc",
+        "calculator_unittest.cc",
     ],
     deps = [
         ":calculator",
